Fixed the weird bug where the slides were being displaced out of view.

--- a/bjshaf-app/src/App.css
+++ b/bjshaf-app/src/App.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     height: 100vh; /* 100% of the viewport height */
-    overflow: hidden; /* Hide overflow to prevent external scroll */
+    overflow: hidden;
 }
 
 /*============================= Style the landing page ==============================*/
@@ -98,31 +98,28 @@ swiper-container::part(bullet-active) {
     background-color: #ffffff;
 }
 
-.storySlider {
+.storySliderContainer {
     margin: auto;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 75%;
-    height: 75%;
-}
-
-.storySliderContainer {
-    display: flex;
     justify-content: center;
     align-items: center;
-    height: 150vh;
-    width: 100%;
+    height: 100vh;
+    width: 80%;
 }
 
 .titleSlide {
     text-align: center;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    display: grid;
+    display: flex;
     place-items: center; /* Centers both horizontally and vertically */
     height: 100%; /* Set a specific height if needed */
     overflow: hidden; /* Prevents content from spilling out */
+}
+
+.titleImgContainer {
+    display: flex;
+    margin-bottom: 10vh;
 }
 
 .titleSlide img {
@@ -148,11 +145,16 @@ swiper-container::part(bullet-active) {
 .panelImage img {
     max-width: 50%; /* Makes sure the image is responsive */
     width: auto;
-    height: auto; /* Keeps the aspect ratio of the image */
+    height: 40vh; /* Keeps the aspect ratio of the image */
 }
 
 .headshot {
     margin-top: 1vh;
+}
+
+.headshot img {
+    margin-top: 1vh;
+    height: 30vh;
 }
 
 .skipToEndButton {
@@ -167,7 +169,7 @@ swiper-container::part(bullet-active) {
     ); /* Shift it back by half its width to truly center it */
     height: 4vh; /* Height of the circle */
     width: 7vw; /* Width of the circle */
-    margin-top: 26vh;
+    margin-top: 23vh;
     background-color: white; /* White background color */
     color: #333; /* Dark text for contrast */
     font-family: 'Roboto', sans-serif; /* Assuming you're using Roboto elsewhere */
@@ -194,7 +196,7 @@ swiper-container::part(bullet-active) {
     ); /* Shift it back by half its width to truly center it */
     height: 6vh; /* Height of the circle */
     width: 7vw; /* Width of the circle */
-    margin-top: 24vh;
+    margin-top: 21vh;
     background-color: white; /* White background color */
     color: #333; /* Dark text for contrast */
     font-family: 'Roboto', sans-serif; /* Assuming you're using Roboto elsewhere */
@@ -284,12 +286,24 @@ swiper-container::part(bullet-active) {
 /*=====================================================================================*/
 
 /*============================= Style the Projects grid ==============================*/
+.projectContainer1 {
+    display: flex; /* Establishes a flex container */
+    align-items: center; /* Vertically aligns the children in the middle */
+    justify-content: space-between; /* Spaces the children out with equal space between them */
+    margin: 1vw; /* Adds some margin around the slide for spacing */
+    width: auto;
+    height: auto;
+    margin-top: 10vh;
+}
 
 .projectContainer {
     display: flex; /* Establishes a flex container */
     align-items: center; /* Vertically aligns the children in the middle */
     justify-content: space-between; /* Spaces the children out with equal space between them */
     margin: 1vw; /* Adds some margin around the slide for spacing */
+    width: auto;
+    height: auto;
+    margin-top: 20vh;
 }
 
 .projectImage {
@@ -352,21 +366,14 @@ swiper-container::part(bullet-active) {
     background-color: #ff8c00;
 }
 /*====================================================================================*/
-.keen-slider {
-    display: flex;
+
+.keen-slider .keen-slider__slide {
     flex-direction: column;
     align-items: center; /* Align horizontally center */
-    justify-content: center; /* Align vertically center */
-    height: 100%;
-    width: 100%;
-}
-
-.keen-slider__slide {
-    display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%; /* Each slide's height is the same as the container's height */
-    font-size: 20px;
+    text-align: center;
     min-height: 100vh;
     max-height: 100vh;
+    width: 100%;
+    height: 100%;
 }
